@@ -12,9 +12,9 @@ use namespace::autoclean;
 use Import::Into;
 use Sub::Attribute;
 
-# We don't use anything from this module, but we want to specify a specific
-# prereq version.
-use Test2 1.302059 ();
+# We don't use anything from this module in this one, but we want to require a
+# specific version.
+use Test2 1.1302118 ();
 
 use Test::Class::Moose::AttributeRegistry;
 use Test::Class::Moose::Config;
